# forge-room

./: .env-example  .gitignore  README.md  start.sh
ai/: README.md
backend/: README.md  alembic.ini  live_test.py  pyproject.toml  test_settings.py
backend/alembic/: env.py
backend/alembic/versions/: 20260424_0001_init_schema.py  3ef750036d1c_add_skills_table.py
backend/src/forgeroom_backend/: README.md  __init__.py
backend/src/forgeroom_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/forgeroom_backend/execution/: README.md  __init__.py  diff_utils.py  fallbacks.py  gemini_cli.py  git_ops.py  main.py
backend/src/forgeroom_backend/orchestrator/: __init__.py  graph.py  main.py  prompts.py  providers.py  state.py  utils.py
backend/src/forgeroom_backend/orchestrator/nodes/: __init__.py  drift_detector.py  risk_autopsy.py  supervisor.py
backend/src/forgeroom_backend/orchestrator/nodes/agents/: appsec.py
backend/src/forgeroom_backend/shared/: __init__.py  blame.py  bootstrap.py  contracts.py  database.py  demo_repo.py  exporter.py  models.py  repository.py  settings.py
backend/src/forgeroom_backend/websocket_gateway/: __init__.py  connection_manager.py  debounce.py  main.py  publisher.py
backend/tests/: conftest.py  test_core_functionalities.py  test_execution_bridge.py  test_execution_detailed.py  test_orchestrator_logic.py  test_repository.py
frontend/: ForgeRoom_Frontend_Spec.docx  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  (+3 more)
(+18 files in other folders)
